--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bescene-studio-demo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cwinnard.github.io/bescene-react-demo",
+  "homepage": "https://cwinnard.github.io/bescene-studio-demo/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
